# IdleSchemes.Api/openapispec.json
@@ -67,26 +67,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/TicketClassModel"
-                  }
+                  "$ref": "#/components/schemas/PublicTicketCollection"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/TicketClassModel"
-                  }
+                  "$ref": "#/components/schemas/PublicTicketCollection"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/TicketClassModel"
-                  }
+                  "$ref": "#/components/schemas/PublicTicketCollection"
                 }
               }
             }
@@ -1112,6 +1103,124 @@
           }
         }
       },
+      "PublicAvailableTicket": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "nullable": true
+          },
+          "class": {
+            "type": "string",
+            "nullable": true
+          },
+          "seat": {
+            "type": "string",
+            "nullable": true
+          },
+          "price": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "PublicTicketClass": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "nullable": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "limit": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "canRegister": {
+            "type": "boolean"
+          },
+          "discreteTickets": {
+            "type": "boolean"
+          },
+          "inviteCode": {
+            "type": "string",
+            "nullable": true
+          },
+          "price": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "seatSelection": {
+            "$ref": "#/components/schemas/SeatSelection"
+          }
+        },
+        "nullable": true
+      },
+      "PublicTicketClassCollection": {
+        "type": "object",
+        "properties": {
+          "class": {
+            "$ref": "#/components/schemas/PublicTicketClass"
+          },
+          "remainingCount": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "all": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "confirmed": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "pending": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "available": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/PublicAvailableTicket"
+            },
+            "nullable": true
+          }
+        }
+      },
+      "PublicTicketCollection": {
+        "type": "object",
+        "properties": {
+          "classes": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/PublicTicketClassCollection"
+            },
+            "nullable": true
+          },
+          "all": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "confirmed": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "pending": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "available": {
+            "type": "array",
+            "items": { },
+            "nullable": true
+          }
+        }
+      },
       "RegionModel": {
         "type": "object",
         "properties": {
@@ -1223,7 +1332,7 @@
             "type": "string",
             "nullable": true
           },
-          "holderName": {
+          "forName": {
             "type": "string",
             "nullable": true
           }
@@ -1252,67 +1361,6 @@
           "seat": {
             "type": "string",
             "nullable": true
-          }
-        }
-      },
-      "TicketClassAvailabilityModel": {
-        "type": "object",
-        "properties": {
-          "totalCount": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "confirmedCount": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "pendingCount": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "confirmedAndPendingCount": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "remainingCount": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "remainingSeats": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "pendingSeats": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        },
-        "nullable": true
-      },
-      "TicketClassModel": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "basePrice": {
-            "type": "number",
-            "format": "double"
-          },
-          "availability": {
-            "$ref": "#/components/schemas/TicketClassAvailabilityModel"
-          },
-          "seatSelection": {
-            "$ref": "#/components/schemas/SeatSelection"
           }
         }
       },
