# IdleSchemes.Data/Models/Events/Ticket.cs
@@ -5,16 +5,12 @@ namespace IdleSchemes.Data.Models.Events {
     [PrimaryKey(nameof(Id))]
     public class Ticket {
         public required string Id { get; init; }
-
-        [Column("RegistrationId")]
-        public required Registration Registration { get; set; }
         [Column("TicketClassId")]
         public required TicketClass TicketClass { get; set; }
         public string? Seat { get; set; }
+        public int Price { get; set; }
 
-        [Column("UserId")]
-        public User? User { get; set; }
-        public string? HolderName { get; set; }
-
+        [Column("RegistrationId")]
+        public Registration? Registration { get; set; }
     }
 }
